--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "allowFunctionParams": 0
+    "allowFunctionParams": 0,
+    "no-underscore-dangle": ["error",{"allow":["_id"]}]
   }
 }
